--- a/app/expeditions/webapp/index.html
+++ b/app/expeditions/webapp/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Peaks</title>
+    <title>Expeditions</title>
     <style>
         html, body, body > div, #container, #container-uiarea {
             height: 100%;
@@ -15,7 +15,7 @@
         src="https://sapui5.hana.ondemand.com/1.120.0/resources/sap-ui-core.js"
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-resourceroots='{
-            "test.peaks": "./"
+            "mountaineering.expeditions": "./"
         }'
         data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
         data-sap-ui-compatVersion="edge"
@@ -26,9 +26,9 @@
 <body class="sapUiBody sapUiSizeCompact" id="content">
     <div
         data-sap-ui-component
-        data-name="test.peaks"
+        data-name="mountaineering.expeditions"
         data-id="container"
-        data-settings='{"id" : "test.peaks"}'
+        data-settings='{"id" : "mountaineering.expeditions"}'
         data-handle-validation="true"
     ></div>
 </body>
