--- a/app/expeditions/webapp/test/flpSandbox.html
+++ b/app/expeditions/webapp/test/flpSandbox.html
@@ -43,10 +43,10 @@
                 }
             },
             applications: {
-                "testpeaks-tile": {
-                    title: "Peaks",
-                    description: "Peaks",
-                    additionalInformation: "SAPUI5.Component=test.peaks",
+                "mountaineeringexpeditions-tile": {
+                    title: "Expeditions",
+                    description: "Expeditions",
+                    additionalInformation: "SAPUI5.Component=mountaineering.expeditions",
                     applicationType: "URL",
                     url: "../"
                 }
@@ -64,7 +64,7 @@
         data-sap-ui-theme="sap_horizon"
         data-sap-ui-compatVersion="edge"
         data-sap-ui-language="en"
-        data-sap-ui-resourceroots='{"test.peaks": "../"}'
+        data-sap-ui-resourceroots='{"mountaineering.expeditions": "../"}'
         data-sap-ui-frameOptions="allow"> // NON-SECURE setting for testing environment
     </script>
 </head>
